prevent leaderboard info icon from jumping on hover

--- a/web/src/components/pages/dashboard/stats/leaderboard.css
+++ b/web/src/components/pages/dashboard/stats/leaderboard.css
@@ -47,11 +47,8 @@
                     fill: var(--blue) !important;
                 }
 
-                & svg {
-                    margin-right: 10px;
-                }
-
                 & .text {
+                    margin-left: 10px;
                     display: block;
                     white-space: nowrap;
                 }
